backport: re PR rtl-optimization/85805 (Wrong code for 64 bit comparisons on avr-gcc)

Backport from trunk
	2018-07-26  Segher Boessenkool  <segher@kernel.crashing.org>

	PR rtl-optimization/85805
	* combine.c (reg_nonzero_bits_for_combine): Only use the last set
	value for hard registers if that was written in the same mode.

From-SVN: r268888